# ZeroKnowledge_home_challenge

./: Cargo.toml  README.md  deployment-guide.md  foundry.toml  rust-toolchain.toml
.github/workflows/: main.yml
apps/: Cargo.toml  README.md
contracts/: EvenNumber copy.sol  IEvenNumber copy.sol  IOddNumber.sol  OddNumber.sol  README.md
methods/: README.md
methods/guest/: Cargo.toml  README.md
methods/src/: lib.rs
script/: Deploy.s copy.sol  Deploy.s.sol  config.toml
tests/: EvenNumber.t.sol  OddNumber.t.sol
