[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.11.6" }
log = { workspace = true }
methods = { workspace = true }
opentelemetry = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.28.0" }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }
tokio = { version = "1.35", features = ["full"] }
url = { workspace = true }
