[package]
name = "is-odd-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-odd"
path = "src/bin/is_odd.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8" }
risc0-zkvm = { version = "1.2", default-features = false, features = ['std'] }

[profile.release]
lto = "thin"
